--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,29 @@ services:
     - .:/usr/src/app/${BOT_NAME:-tg_bot}
     command: python3 -m bot
     restart: always
+    networks:
+      - botnet
+    env_file:
+      - ".env.dist"
+    depends_on:
+      - db
+
+  db:
+    image: sameersbn/postgresql:10-2
+    container_name: database
+    restart: always
     env_file:
       - ".env"
+    environment:
+      POSTGRES_PASSWORD: $PG_PASSWORD
+      POSTGRES_DB: $DB_NAME
+    ports:
+      - 5432:5432
+    networks:
+      - botnet
+    volumes:
+      - ./postgresql:/var/lib/postgresql
+
+networks:
+  botnet:
+    driver: bridge
