--- a/.env.dist
+++ b/.env.dist
@@ -1,12 +1,18 @@
-BOT_CONTAINER_NAME=bot_container_name
-BOT_IMAGE_NAME=botimage_name
-BOT_NAME=mybotname
-BOT_TOKEN=1923223240:AAGTjYYNbjjR2WdFmDBb4fgYLPh3sBoPAwM
-ADMINS=123456,654321
+BOT_CONTAINER_NAME=bot_grafana_container
+BOT_IMAGE_NAME=bot_grafana_image
+BOT_NAME=bot_statistics
+BOT_TOKEN=Your token
+ADMINS=1413282568
 USE_REDIS=False
 
-DB_USER=postgres
-PG_PASSWORD=1234
-DB_PASS=1234
-DB_NAME=alchemy
-DB_HOST=127.0.0.1
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=1234
+POSTGRES_DB=test
+DB_HOST=localhost
+
+INFLUXDB_DB=bot_statistics
+INFLUXDB_ADMIN_USER=admin
+INFLUXDB_ADMIN_PASSWORD=admin_password
+INFLUXDB_USER=influx_user
+INFLUXDB_USER_PASSWORD=influx_password
+INFLUXDB_HTTP_AUTH_ENABLED=true
