--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-aiogram~=2.12.1
-aioredis
-environs~=8.0.0
-loguru~=0.5.3
-SQLAlchemy~=1.4.19
+aiogram~=2.18
+aioredis~=2.0
+environs~=9.4
+SQLAlchemy~=1.4
+asyncpg~=0.25
+aioinflux
