--- a/.env.dist
+++ b/.env.dist
@@ -1,12 +1,11 @@
-BOT_CONTAINER_NAME=bot_container_name
-BOT_IMAGE_NAME=botimage_name
-BOT_NAME=mybotname
-BOT_TOKEN=1923223240:AAGTjYYNbjjR2WdFmDBb4fgYLPh3sBoPAwM
-ADMINS=123456,654321
+BOT_CONTAINER_NAME=bot_container
+BOT_IMAGE_NAME=bot_image
+BOT_NAME=my_tg_bot
+BOT_TOKEN=token
+ADMINS=1413282568
 USE_REDIS=False
 
-DB_USER=postgres
-PG_PASSWORD=1234
-DB_PASS=1234
-DB_NAME=alchemy
-DB_HOST=127.0.0.1
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=1234
+POSTGRES_DB=test
+DB_HOST=localhost
